available at Chrome webstore

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-03-16  Tatsuwo  <yto at example.com>
+
+	* memo: 3回目審査通って Chrome ウェブストアで公開された。
+	Kiseppe - Price Chart for Amazon Japan Kindle - Chrome ウェブストア
+	https://chrome.google.com/webstore/detail/kiseppe-price-chart-for-a/jhmbgbjpbiiklgmfabbcldoddlljplle
+
 2023-03-15  Tatsuwo  <yto at example.com>
 
 	* memo: 3回目審査
