--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,13 @@
 2023-03-19  Tatsuwo  <yto at example.com>
 
+	* README.md: Firefox についての記述
+
 	* manifest.json: ff用の記述
 	"browser_specific_settings": { "gecko": { "id": "kiseppe_ff@example.com" } },
 
 	* memo: Firefox 拡張機能の審査通る。1回で済んだ。
 	Kiseppe - Kindle Price Chart – 🦊 Firefox (ja) 向け拡張機能を入手
-https://addons.mozilla.org/ja/firefox/addon/kiseppe-price-chart-kindle/
+	https://addons.mozilla.org/ja/firefox/addon/kiseppe-price-chart-kindle/
 
 	ffでの問題点。
 	ff だと iframe の src 側の高さが想定よりも高くなる。
