--- a/ChangeLog
+++ b/ChangeLog
@@ -12,13 +12,16 @@
 	ffでの問題点。
 	ff だと iframe の src 側の高さが想定よりも高くなる。
 	iframe 内に描画される前の src 側の width が 90px とかになっている模様。
-	src 側 (api 出力) で 400 max にすることに。
+	幅が狭くなる分、高くなるわけで。
+	src 側 (api 出力) で height を 400 max にすることに。
 
 2023-03-18  Tatsuwo  <yto at example.com>
 
 	* memo: Firefox 拡張機能の審査待ち。
 
 2023-03-16  Tatsuwo  <yto at example.com>
+
+	* v1.0.1: 審査通ったので 1.0.0 から 1.0.1 に
 
 	* memo: 3回目審査通って Chrome ウェブストアで公開された。
 	Kiseppe - Price Chart for Amazon Japan Kindle - Chrome ウェブストア
