--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-04-02  Tatsuwo  <yto at example.com>
+
+	* v1.0.2: Firefox の審査通ったので 1.0.2 に (リリース忘れてた)
+
 2023-03-19  Tatsuwo  <yto at example.com>
 
 	* README.md: Firefox についての記述
