--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-09-20  Tatsuwo  <yto at example.com>
+
+	* chrome/content-script.js: ランキングページにも対応。
+	＆その他いろいろ。
+
 2023-09-19  Tatsuwo  <yto at example.com>
 
 	* chrome/content-script.js:
