--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-09-23  Tatsuwo  <yto at example.com>
+
+	* chrome/content-script.js:
+	- Author page 対応
+	- プログラミング構成変更
+
 2023-09-21  Tatsuwo  <yto at example.com>
 
 	* chrome/manifest.json: background 関連の削除
