--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2023-10-03  Tatsuwo  <yto at example.com>
+
+	* chrome/content-script.js: iroiro
+
+2023-09-30  Tatsuwo  <yto at example.com>
+
+	* chrome/content-script.js: iroiro
+
 2023-09-28  Tatsuwo  <yto at example.com>
 
 	* chrome/content-script.js: iroiro
