--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,23 @@
+2023-10-19  Tatsuwo  <yto at example.com>
+
+	* firefox: chrome/ のソースをコピーしてテスト。
+	セール作品の背景グラデーションが意図通りでなかったので、
+	どちらでも同じになるように修正。
+	OLD: linear-gradient(${rgba}, 90%, white)
+	NEW: linear-gradient(${rgba}, 90%, rgba(${rgb},0)
+
+
+2023-10-18  Tatsuwo  <yto at example.com>
+
+	* chrome/content-script.js: option対応
+
+	* chrome/options.js: new
+
+	* chrome/options.html: new
+
 2023-10-15  Tatsuwo  <yto at example.com>
+
+	* release: v2.0.0-alpha
 
 	* chrome/debug-message.css: new.  -
 
