--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2023-10-29  Tatsuwo  <yto at example.com>
 
+	* release: v2.0.0-beta.2
+
 	* memo: カルーセルへの処理（カルーセル内の各作品にグラフ表示ボタンを設置する処理）をオプションとした。
 	デフォルトでは表示しない (false)。
 	まだ見ぬケースで暴走する可能性を危惧。
