--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-10-30  Tatsuwo  <yto at example.com>
+
+	* release: v2.0.0-rc
+	審査に出した版。
+
 2023-10-29  Tatsuwo  <yto at example.com>
 
 	* release: v2.0.0-beta.2
