--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-11-06  Tatsuwo  <yto at example.com>
+
+	* release: v2.0.1
+	審査に出す
+
 2023-11-03  Tatsuwo  <yto at example.com>
 
 	* chrome/content-script.js: new wishlist_component().
@@ -10,11 +15,6 @@
 	修正:
         OLD: document.getElementById('nav-search-label-id');
 	NEW: document.querySelector('#nav-subnav .nav-a-content')
-
-	* memo: 次のリリース v2.0.1
-	- innerHTML で変数を使っている箇所の脆弱性対応 (APIサーバが乗っ取られると危険なため)
-	- Kindle ページか否かの判定ロジックの修正 (グラフが挿入されないケースがあった)
-	- ほしい物リスト (wishlist) ページにも対応
 
 2023-11-01  Tatsuwo  <yto at example.com>
 
