--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-11-07  Tatsuwo  <yto at example.com>
+
+	* memo: v2.0.1 公式公開
+	- Firefox ADD-ONS: 審査依頼後一瞬で審査通る (11/6)
+	- Chrome ウェブストア: 11/7 の午後に審査通る、ただし日付は 11/6
+
 2023-11-06  Tatsuwo  <yto at example.com>
 
 	* release: v2.0.1
