--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2024-01-26  Tatsuwo  <yto at example.com>
+
+	* chrome/kiseppe.css:
+	.kiseppe-pg-btn の z-index を調整 (10000 => 1)
+
+2023-12-28  Tatsuwo  <yto at example.com>
+
+	* memo: v2.0.4 公式公開
+
 2023-12-25  Tatsuwo  <yto at example.com>
 
 	* chrome/content-script.js:
