--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-06-22  Tatsuwo  <yto at example.com>
+
+	* memo: v2.0.6 公式公開
+	chrome firefox 審査通ったのは 6/21
+
 2024-06-21  Tatsuwo  <yto at example.com>
 
 	* firefox/content-script.js:
