--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2024-07-02  Tatsuwo  <yto at example.com>
+
+	* firefox/manifest.json: v2.0.7
+
+	* chrome/manifest.json: v2.0.7
+
 2024-07-01  Tatsuwo  <yto at example.com>
 
 	* firefox/manifest.json: v2.0.6.9
