--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2025-01-25  Tatsuwo  <yto at example.com>
+
+	* memo: v2.0.10 公式公開
+	- github で Release (1/25)
+	- chrome の審査通ったのは 1/25
+	- firefox 審査通ったのは 1/24
+
 2025-01-24  Tatsuwo  <yto at example.com>
 
 	* firefox/manifest.json: 2.0.10
